tests/macros/select/filter_async.stderr
error: option `filter_async` does not exist for kind `select`
 --> $DIR/filter_async.rs:2:52
  |
2 |     let q = inquisition::questions![Select { async filter: todo!() }];
  |                                                    ^^^^^^
