tests/macros/select/filter_async.rs
fn main() {
    let q = inquisition::questions![Select { async filter: todo!() }];
}
